修改echarts，关闭option的合并的功能。

--- a/app/templates/stat_manage.html
+++ b/app/templates/stat_manage.html
@@ -194,7 +194,7 @@
                         series: dsets
                     };
 
-                    myChart.setOption(option);
+                    myChart.setOption(option, true);
                   });
             });
         });
